# saas-ecommerce

./: .sourcery.yaml  README.md  db.sqlite3  manage.py  pyproject.toml
backend/: .env  .flake8  .gitignore  Note.txt  db.sqlite3  pyproject.toml  read_only_db.sqlite3
backend/apps/account/: exceptions.py
backend/apps/auth/: apps.py  backends.py  connections.py  constants.py  decorators.py  exceptions.py  filters.py  forms.py  mixins.py  models.py  mutations.py  queries.py  shortcuts.py  signals.py  utils.py
backend/apps/channel/: apps.py  queries.py
backend/apps/checkout/: apps.py
backend/apps/core/: background_tasks.py  connections.py  consumer.py  exceptions.py  forms.py  interval_async_timer.py  models.py  mutations.py  permissions.py  querysets.py  ratelimit.py  schema.py  types.py  utils.py
backend/apps/customer/: apps.py  connections.py  constant.py  filters.py  forms.py  inputs.py  mixins.py  models.py  mutations.py  queries.py  querysets.py  signals.py  types.py
backend/apps/discount/: apps.py  connections.py  filters.py  models.py  queries.py  types.py
backend/apps/giftcard/: apps.py  connections.py  filters.py  models.py  mutations.py  queries.py  types.py
backend/apps/inventory/: apps.py  connections.py  filters.py  models.py  queries.py  types.py
backend/apps/invoice/: apps.py  connections.py  filters.py  models.py  queries.py  types.py
backend/apps/order/: connections.py  filters.py  mixins.py  models.py  queries.py  types.py
backend/apps/payment/: connections.py  constant.py  filters.py  forms.py  inputs.py  mixins.py  models.py  mutations.py  queries.py  types.py
backend/apps/permission/: apps.py
backend/apps/product/: connections.py  constant.py  exceptions.py  (+9 more)
backend/conf/: asgi.py  urls.py  wsgi.py
backend/settings/: _development.py  auth.py  base.py  celery.py  database.py  email.py  graphene.py  i18n.py  logging.py  s3.py  secret.py  slack.py  stripe.py  template copy.py  tenant.py
(+370 files in other folders)
