[tool.poetry]
name = "saas-ecommerce"
version = "0.1.0"
description = ""
authors = ["Naqib Hakimi <naqib.hakimi.cgi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.5"
graphene-django = "^3.0.0"
django-filter = "^22.1"
channels = "^4.0.0"
daphne = "^4.0.0"
channels-redis = "^4.0.0"
reactivex = "^4.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
